<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mechanic.createEntryRep.CreateEntryFragment">

    <data>
        <variable
            name="createEntryViewModel"
            type="com.example.mechanic.createEntryRep.CreateEntryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/BrandET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/brand_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/ModelET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/model_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BrandET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/CreationET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/year_of_creation_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ModelET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/ProblemET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/problem_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CreationET"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/saveB"
            android:layout_width="150dp"
            android:layout_height="76dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="45dp"
            android:onClick="@{()-> createEntryViewModel.onSave(BrandET,ModelET, CreationET, ProblemET)}"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProblemET" />

        <Button
            android:id="@+id/HomeB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="25dp"
            android:text="@string/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveB" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>