<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="car"
            type="com.example.mechanic.database.Cars" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/car_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            tools:text="@string/brand_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:carBrand="@{car}" />

        <TextView
            android:id="@+id/car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            tools:text="@string/model_text"
            app:layout_constraintStart_toEndOf="@+id/car_brand"
            app:layout_constraintTop_toTopOf="parent"
            app:carModel="@{car}" />

        <TextView
            android:id="@+id/car_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            tools:text="@string/year_of_creation_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_brand"
            app:carYear="@{car}" />

        <TextView
            android:id="@+id/car_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            tools:text="@string/problem_text"
            app:layout_constraintBottom_toBottomOf="@+id/car_model"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_year"
            app:layout_constraintTop_toTopOf="parent"
            app:carProblem="@{car}" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>